test/compile_failure/01_unknown_type.c
// EXPECT-ERRORS: 1
// EXPECT: unknown type 'Unknown'
Unknown value;
